--- a/source/clinicalsummary-module.html
+++ b/source/clinicalsummary-module.html
@@ -53,7 +53,7 @@ The Clinical Module covers the following resources:
   <li><a title="[%resdesc CarePlan%]" href="careplan.html">CarePlan</a></li>
   <li><a title="[%resdesc Goal%]" href="goal.html">Goal</a></li>
   <li><a title="[%resdesc CareTeam%]" href="careteam.html">CareTeam</a></li>
-  <li><a title="[%resdesc ClinicalAssessment%]" href="clinicalassessment.html">ClinicalAssessment</a></li>
+  <li><a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ClinicalAssessment.html">ClinicalAssessment</a></li>
   <li><a title="[%resdesc DetectedIssue%]" href="detectedissue.html">DetectedIssue</a></li>
  </ul></td><td><ul>
   <li><a title="[%resdesc ServiceRequest%]" href="servicerequest.html">ServiceRequest</a></li>
