--- a/source/diagnostics-module.html
+++ b/source/diagnostics-module.html
@@ -51,8 +51,8 @@ in order to support consistent definitions for schema and UML derived code.
 
                     <li><a href="imagingselection.html">ImagingSelection</a></li>
                     <li><a href="imagingstudy.html">ImagingStudy</a></li>
-                    <li><a href="moleculardefinition.html">MolecularDefinition</a></li>
-                    <li><a href="genomicstudy.html">GenomicStudy</a></li>
+                    <li><a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-MolecularDefinition.html">MolecularDefinition</a></li>
+                    <li><a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-GenomicStudy.html">GenomicStudy</a></li>
                 </ul>
             </td>
             <td style="width:33%">
@@ -99,15 +99,13 @@ in order to support consistent definitions for schema and UML derived code.
             [%res-item DocumentReference%]
             [%res-item ImagingSelection%]
             [%res-item ImagingStudy%]
-            [%res-item MolecularDefinition%]
-            [%res-item GenomicStudy%]
             [%res-item Specimen%]
             [%res-item BodyStructure%]
         </table>
         <figure>Table 1: Indicates the FHIR Resources that are involved in Diagnostics.</figure>
 
         [%impl-note%]
-        MolecularSequence resource has been replaced by the <a href="moleculardefinition.html">Molecular Definition</a> resource.
+        MolecularSequence resource has been replaced by the <a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-MolecularDefinition.html">Molecular Definition</a> resource.
         [%end-note%]
     </div>
 
