--- a/source/history.html
+++ b/source/history.html
@@ -101,7 +101,7 @@ notes: do not list revision in the version
       <li><a href="resource.html#additional">Additional Resources</a>: Allowing for development of FHIR Resources in other specifications </li>
       <li><a href="group.html">Group</a>: Allowing for groups to act collectively, or receive care collectively - change made based on feedback from LMICs countries, and also for social care</li>
       <li>New data types: <a href="datatypes.html#relativetime">RelativeTime</a></li>
-      <li>New Resources: <a href="devicealert.html">DeviceAlert</a>, <a href="insuranceproduct.html">InsuranceProduct</a>, <a href="moleculardefinition.html">MolecularDefinition</a>, <a href="https://build.fhir.org/ig/HL7/admin-incubator/StructureDefinition-PersonalRelationship.html">PersonalRelationship</a></li>
+      <li>New Resources: <a href="devicealert.html">DeviceAlert</a>, <a href="insuranceproduct.html">InsuranceProduct</a>, <a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-MolecularDefinition.html">MolecularDefinition</a>, <a href="https://build.fhir.org/ig/HL7/admin-incubator/StructureDefinition-PersonalRelationship.html">PersonalRelationship</a></li>
       <li>Removed Resources: EvidenceReport</li>
       <li>Significant changes have been made to the <a href="observation-vitalsigns.html">Vital Signs Profiles</a>, and the profile <a href="medicalproductofhumanorigin.html">Medical Product of Human Origin</a> profile has been added</li>
       <li>The following resources have been updated: <a href="researchstudy.html">ResearchStudy</a>, <a href="researchsubject.html">ResearchSubject</a>,
@@ -154,12 +154,12 @@ notes: do not list revision in the version
         <a href="actordefinition.html">ActorDefinition</a>,
         <a href="artifactassessment.html">ArtifactAssessment</a>,
         <a href="https://build.fhir.org/ig/HL7/oo-incubator/StructureDefinition-BiologicallyDerivedProductDispense.html">BiologicallyDerivedProductDispense</a>,
-        <a href="conditiondefinition.html">ConditionDefinition</a>,
+        <a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ConditionDefinition.html">ConditionDefinition</a>,
         <a href="deviceassociation.html">DeviceAssociation</a>,
         <a href="https://build.fhir.org/ig/HL7/oo-incubator/StructureDefinition-DeviceDispense.html">DeviceDispense</a>,
         <a href="https://build.fhir.org/ig/HL7/admin-incubator/StructureDefinition-EncounterHistory.html">EncounterHistory</a>,
         <a href="https://build.fhir.org/ig/HL7/phx-incubator/StructureDefinition-FormularyItem">FormularyItem</a>,
-        <a href="genomicstudy.html">GenomicStudy</a>,
+        <a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-GenomicStudy.html">GenomicStudy</a>,
         <a href="imagingselection.html">ImagingSelection</a>,
         <a href="https://build.fhir.org/ig/HL7/oo-incubator/StructureDefinition-InventoryItem.html">InventoryItem</a>,
         <a href="https://build.fhir.org/ig/HL7/oo-incubator/StructureDefinition-InventoryReport.html">InventoryReport</a>,
@@ -248,7 +248,7 @@ to a new type.
         <li>New Resources: 
           <a href="https://build.fhir.org/ig/HL7/oo-incubator/StructureDefinition-Transport.html">Transport</a>, <a href="nutritionintake.html">NutritionIntake</a>,
           <a href="actordefinition.html">ActorDefinition</a>, <a href="requirements.html">Requirements</a>,
-          <a href="genomicstudy.html">GenomicStudy</a> and <a href="https://build.fhir.org/ig/HL7/phx-incubator/StructureDefinition-FormularyItem">FormularyItem</a></li>
+          <a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-GenomicStudy.html">GenomicStudy</a> and <a href="https://build.fhir.org/ig/HL7/phx-incubator/StructureDefinition-FormularyItem">FormularyItem</a></li>
           <li>New Data Types: 
             <a href="metadatatypes.html#Availability">Availability</a>, <a href="metadatatypes.html#ExtendedContactDetail">ExtendedContactDetail</a>,
             <a href="metadatatypes.html#MonetaryComponent">MonetaryComponent</a> and <a href="metadatatypes.html#VirtualServiceDetail">VirtualServiceDetail</a></li>
@@ -751,7 +751,7 @@ to a new type.
          <li><a href="careteam.html">CareTeam</a></li>
          <li><a href="codesystem.html">CodeSystem</a></li>
          <li><a href="compartmentdefinition.html">CompartmentDefinition</a></li>
-         <li><a href="linkage.html">Linkage</a></li>
+         <li><a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-Linkage.html">Linkage</a></li>
          <li><a href="measurereport.html">MeasureReport</a></li>
          <li><a href="practitionerrole.html">PractitionerRole</a></li>
          <li>Protocol</li>
@@ -917,7 +917,7 @@ to a new type.
         <li><a href="auditevent.html">AuditEvent</a> - add .event.purposeOfEvent, participant.location, .policy, and .purposeOfUse</li>
         <li><a href="bundle.html">Bundle</a> - major reorganization</li>
         <li><a href="careplan.html">CarePlan</a> - pull goal out + other reorganization</li>
-        <li><a href="clinicalassessment.html">ClinicalImpression</a> - add status, replace careplan &amp; referral with trigger, rename diagnosis to finding, make plan 0..*, </li>
+        <li><a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ClinicalAssessment.html">ClinicalImpression</a> - add status, replace careplan &amp; referral with trigger, rename diagnosis to finding, make plan 0..*, </li>
         <li><a href="composition.html">Composition</a> - change .section.content to refer to List only, not any </li>
         <li><a href="conceptmap.html">ConceptMap</a> - change identifier to url, add useContext, change telecom to contact, </li>
         <li><a href="condition.html">Condition</a> - rename subject to patient, rename status to clinicalStatus, change to bodySite = code or Reference(BodySite), rename .codeableConcept to .code</li>
@@ -1016,7 +1016,7 @@ to a new type.
         <li><a href="appointmentresponse.html">AppointmentResponse</a></li>
         <li><a href="basic.html">Basic</a></li>
         <li><a href="claimresponse.html">ClaimResponse</a></li>
-        <li><a href="clinicalassessment.html">ClinicalImpression</a></li>
+        <li><a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ClinicalAssessment.html">ClinicalImpression</a></li>
         <li><a href="communication.html">Communication</a></li>
         <li><a href="communicationrequest.html">CommunicationRequest</a></li>
         <li><a href="contract.html">Contract</a></li>
