--- a/source/modules-fragment.html
+++ b/source/modules-fragment.html
@@ -110,7 +110,7 @@
                 </a>
             </p>
             <p class="content">
-                <a href="observation.html">Observation</a>, <a href="diagnosticreport.html">DiagnosticReport</a>, <a href="specimen.html">Specimen</a>, <a href="imagingstudy.html">ImagingStudy</a>, <a href="moleculardefinition.html">MolecularDefinition</a>, <a href="documentreference.html">DocumentReference</a>, <a href="servicerequest.html">ServiceRequest</a>, etc.
+                <a href="observation.html">Observation</a>, <a href="diagnosticreport.html">DiagnosticReport</a>, <a href="specimen.html">Specimen</a>, <a href="imagingstudy.html">ImagingStudy</a>, <a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-MolecularDefinition.html">MolecularDefinition</a>, <a href="documentreference.html">DocumentReference</a>, <a href="servicerequest.html">ServiceRequest</a>, etc.
             </p>
         </div>
         <div id="medication" class="box">
