--- a/source/nutrition-module.html
+++ b/source/nutrition-module.html
@@ -66,7 +66,7 @@ in order to support consistent definitions for schema and UML derived code.
         </tr>
         <tr bgcolor="#EFEFEF">
             <td valign="top">
-                <a href="clinicalassessment.html">Clinical Assessment</a>
+                <a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ClinicalAssessment.html">Clinical Assessment</a>
             </td>
             <td valign="top">Clinical</td>
             <td>A record of a clinical assessment performed to determine what problem(s) (Nutrition Diagnosis) may affect the patient and before planning the treatments or management strategies that are best to manage a patient's condition.</td>
@@ -278,7 +278,7 @@ in order to support consistent definitions for schema and UML derived code.
     <ol>
         <li>Preterm infant was delivered and admitted to the NICU at a <a href="observation.html">weight of 1500 grams</a>.</li>
         <li>Nurse initiates <a href="nutritionorder.html">trophic enteral feeding for a newborn in the neonatal intensive care unit at 20ml/kg with mother’s breast milk (or donor human milk)</a> via an orogastric feeding tube per medical provider order based on unit feeding protocol.</li>
-        <li>Medical provider refers neonate to Registered Dietitian Nutritionist (RDN) for <a href="clinicalassessment.html">nutrition assessment</a> and management (composition and advancement) of enteral feeding. Documentation is in the electronic health record (EHR) implementing the Nutrition Care Process.</li>
+        <li>Medical provider refers neonate to Registered Dietitian Nutritionist (RDN) for <a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ClinicalAssessment.html">nutrition assessment</a> and management (composition and advancement) of enteral feeding. Documentation is in the electronic health record (EHR) implementing the Nutrition Care Process.</li>
         <li>RDN with order writing privileges prescribes for <a href="nutritionorder.html">enteral feeding advancements of 20ml/kg per day to a goal of 160ml/kg per day</a> of <a href="nutritionproduct.html">mother’s (or donor human milk) breast milk </a> RDN enters prescription into EHR via CPOE.</li>
         <li>RDN prescribed feedings are initiated. Upon follow up and monitoring and evaluation, feeding tolerance is assessed and Care Plan and Goal developed.  <a href="nutritionproduct.html">Human milk fortifier (HMF)</a> at 22kcal/oz is added to the Nutrition Order.</li>
         <li>After a few more days, the neonate currently weighs 1400 grams and has symptoms of feeding intolerance.
