--- a/source/resourceguide.html
+++ b/source/resourceguide.html
@@ -163,7 +163,7 @@ the event they are concerned with passes.
 <tr><td><a href="occupationaldata.html">OccupationalData</a></td><td><a href="#ongoing">Ongoing</a></td><td>Act</td><td></td></tr>
 <tr><td><a href="procedure.html">Procedure</a></td><td><a href="#past">Past</a></td><td>Act</td><td><a href="lifecycle.html#clinical">Clinical Workflow</a></td></tr>
 <tr><td><a href="familymemberhistory.html">FamilyMemberHistory</a></td><td><a href="#past">Past</a></td><td>Act</td><td></td></tr>
-<tr><td><a href="clinicalassessment.html">ClinicalAssessment</a></td><td><a href="#past">Past</a></td><td>Act</td><td></td></tr>
+<tr><td><a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ClinicalAssessment.html">ClinicalAssessment</a></td><td><a href="#past">Past</a></td><td>Act</td><td></td></tr>
 <tr><td><a href="riskassessment.html">RiskAssessment</a></td><td><a href="#present">Present</a></td><td>Act</td><td><a href="lifecycle.html#clinical">Clinical Workflow</a></td></tr>
 <tr><td><a href="detectedissue.html">DetectedIssue</a></td><td><a href="#present">Present</a></td><td>Act</td><td></td></tr>
 </table>
