--- a/source/workflow.html
+++ b/source/workflow.html
@@ -168,7 +168,7 @@ in order to support consistent definitions for schema and UML derived code.
                         <ul>
                             <li><a href="https://build.fhir.org/ig/HL7/admin-incubator/StructureDefinition-ChargeItem.html">ChargeItem</a></li>
                             <li><a href="claimresponse.html">ClaimResponse</a></li>
-                            <li><a href="clinicalassessment.html">ClinicalAssessment</a></li>
+                            <li><a href="https://build.fhir.org/ig/HL7/pc-incubator/StructureDefinition-ClinicalAssessment.html">ClinicalAssessment</a></li>
                             <li><a href="communication.html">Communication</a></li>
                             <li><a href="composition.html">Composition</a></li>
                             <li><a href="condition.html">Condition (aka Problem)</a></li>
