tidy up dosage page

--- a/source/dosage.html
+++ b/source/dosage.html
@@ -131,9 +131,15 @@ If there are multiple components, and they specify different bounds for their re
 the step lasts as long as the longest component.
 </p>
 
+<p>
+DosageDetails is used in the following places: [%dtusage DosageDetails%]
+</p>
+
 <a name="definition"></a>
+<a name="Dosage"></a>
+<a name="dosage"></a>
 <h2 style="margin-bottom: 1px">
-Content
+Dosage
 </h2>
 <p>
 The Dosage data type describes a single course of medication application. The course is 
@@ -192,7 +198,12 @@ such as 'no more than 1g', and also 'no more than 5 ug/kg of body weight'.
 [%tx DosageSafety%]
 </div>
 
-<a name="safety"></a>
+<p>
+DosageSafety is used in the following places: [%dtusage DosageSafety%]
+</p>
+
+
+<a name="condition"></a>
 <a name="DosageCondition"></a>
 <h2 style="margin-bottom: 1px">
 DosageCondition
@@ -216,6 +227,11 @@ Some examples of it's use:
 [%dt.constraints DosageCondition%]
 [%tx DosageCondition%]
 </div>
+
+<p>
+DosageCondition is used in the following places: [%dtusage DosageCondition%]
+</p>
+
 
 [%file newfooter%]
 
