sort out trial-use notes

--- a/source/clinicalreasoning-topics-supporting-documentation.html
+++ b/source/clinicalreasoning-topics-supporting-documentation.html
@@ -10,7 +10,7 @@
 
 
 
-<table class="colsi"><tbody><tr><td id="wg">Responsible Owner: Work Group <a _target="blank" href="[%wg cds%]">[%wgt cds%]</a></td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:  <!-- !ns! --><a href="versions.html#std-process">Trial Use</a></td></tr></tbody></table>
+<table class="colsi"><tbody><tr><td id="wg">Responsible Owner: Work Group <a _target="blank" href="[%wg cds%]">[%wgt cds%]</a></td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:  <!-- !ns! --><a href="versions.html#std-process">Normative</a></td></tr></tbody></table>
 
 <a name="supporting-documentation"> </a>
 <h3>Supporting Documentation</h3>
