--- a/source/marketingstatus-definitions.html
+++ b/source/marketingstatus-definitions.html
@@ -14,7 +14,7 @@
 
 <%dtxheader definition MarketingStatus%>
 <h2>MarketingStatus Detailed Descriptions</h2>
-<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
+<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Normative</a></td></tr></table>
 
 <a name="def"></a>
 <h3 style="margin-bottom: 1px">MarketingStatus</h3>
