--- a/source/dosage-definitions.html
+++ b/source/dosage-definitions.html
@@ -14,7 +14,7 @@
 
 <%dtxheader definitions Dosage%>
 <h2>DosageDetails Detailed Descriptions</h2>
-<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
+<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Normative</a></td></tr></table>
 
 <a name="def"></a>
 <h3 style="margin-bottom: 1px">DosageDetails</h3>
@@ -23,7 +23,6 @@
 
 
 <h2>Dosage Detailed Descriptions</h2>
-<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
 
 <a name="def"></a>
 <h3 style="margin-bottom: 1px">Dosage</h3>
@@ -32,7 +31,6 @@
 
 
 <h2>DosageSafety Detailed Descriptions</h2>
-<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
 
 <a name="def"></a>
 <h3 style="margin-bottom: 1px">DosageSafety</h3>
@@ -40,7 +38,6 @@
 <%dictionary DosageSafety%>
 
 <h2>Dosage Detailed Descriptions</h2>
-<table class="colsi"><tr><td id="wg">Responsible Owner: <a _target="blank" href="[%wg phx%]">[%wgt phx%]</a> Work Group</td><td id="ballot"><a href="versions.html#std-process">Standards Status</a>:<!--!ns!--><a href="versions.html#std-process">Trial Use</a></td></tr></table>
 
 <a name="def"></a>
 <h3 style="margin-bottom: 1px">DosageCondition</h3>
