--- a/source/dosage-examples.html
+++ b/source/dosage-examples.html
@@ -214,7 +214,7 @@ Methylphenidate 10 mg tablets — 10 mg at 07:30 and 12:00, 5 mg at 16:00 Mon–
     <li><code>Dosage.timing.repeat.dayOfWeek</code> and <code>…timeOfDay</code> for fixed administrations.</li> 
     <li><code>Dosage.asNeededBoolean</code> for PRN (evening); optionally <code>…when = EVE</code>.</li> 
     <li><code>Dosage.maxDosePerPeriod</code> (Ratio) for 150&nbsp;mg per week.</li> 
-    <li><code>MedicationRequest.dosageInstruction.safety.limit</code> (scope=<code>period</code>) for 150&nbsp;mg per week.</li> 
+    <li><code>MedicationRequest.dosageInstruction.safety.doseLimit</code> (scope=<code>period</code>) for 150&nbsp;mg per week.</li> 
   </ul> 
 
 <pre class="yaml">
@@ -509,8 +509,7 @@ MedicationRequest
   medication 
     concept
       coding: Prednisone 10 mg tablets
-
-  dosage
+  dosageInstruction 
     step 
       component
         timing
@@ -1063,7 +1062,7 @@ Epirubicin 45 mg/m² IV on Days 1 &amp; 8 every 28 days × 6 cycles; infuse over
 <ul> 
     <li>Two <code>dosageDetails.step.component</code> entries for Day&nbsp;1 and Day&nbsp;8 of each 28-day period (×6 cycles).</li> 
     <li>Infusion duration → <code>Dosage.timing.repeat.duration</code>=20, <code>durationUnit</code>=min; or encode under <code>doseAndRate.rate[x]</code> if modeled as rate.</li> 
-    <li>Maxima via <code>MedicationRequest.dosageInstruction.safety.limit</code> with scopes <code>period</code> (per cycle) and <code>lifetime</code>.</li> 
+    <li>Maxima via <code>MedicationRequest.dosageInstruction.safety.doseLimit</code> with scopes <code>period</code> (per cycle) and <code>lifetime</code>.</li> 
     <li>Day-8 offset is expressed via a <code>Timing.repeat</code> extension (e.g., <code>startOffset=8 d</code>).</li> 
   </ul> 
 <pre class="yaml">
@@ -1071,7 +1070,7 @@ MedicationRequest
   medication 
     concept
       coding: Epirubicin 
-  dosage
+  dosageInstruction 
     step
       component
         timing
@@ -1319,7 +1318,7 @@ MedicationRequest
   medication 
     concept
       coding: Microgynon tab
-  dosage
+  dosageInstruction 
     simple
       timing
         repeat
@@ -1445,8 +1444,7 @@ MedicationRequest
   medication 
     concept
       coding: Iron sucrose
-
-  dosage
+  dosageInstruction 
     simple
       timing
         repeat
@@ -1548,7 +1546,7 @@ Symbicort (budesonide/formoterol):
 <p><b>Structure</b></p>
 <ul> 
     <li>Model planned daily dosing and PRN as separate <code>dosageDetails.step.component</code> entries.</li> 
-    <li>Use <code>MedicationRequest.dosageInstruction.safety.limit</code> with <code>scope=administration</code> (6 puffs) and <code>scope=period</code> (12 puffs / 1 day).</li> 
+    <li>Use <code>MedicationRequest.dosageInstruction.safety.doseLimit</code> with <code>scope=administration</code> (6 puffs) and <code>scope=period</code> (12 puffs / 1 day).</li> 
   </ul> 
   
 <pre class="yaml">
@@ -1556,7 +1554,7 @@ MedicationRequest
   medication 
     concept
       coding: Symbicort
-  dosage
+  dosageInstruction 
     step
       component
         timing
@@ -1738,7 +1736,7 @@ MedicationRequest
   medication 
     concept
       coding: Vitamin D
-  dosage
+  dosageInstruction 
     simple
       timing
         repeat
@@ -1858,7 +1856,7 @@ MedicationRequest
   medication 
     concept
       coding: Vitamin D
-  dosage
+  dosageInstruction 
     step
       component
         timing
@@ -2088,7 +2086,7 @@ MedicationRequest
   medication 
     concept
       coding: Malaria XXX
-  dosage
+  dosageInstruction 
     step
       start
         contextCode
@@ -2267,8 +2265,7 @@ MedicationRequest
   medication 
     concept
       coding: PREDNISOLONE 20 mg
-
-  dosage
+  dosageInstruction 
     step
       end
         contextDefinition: EventDefinition/example-data-with-profile 
@@ -2524,7 +2521,7 @@ Dovobet ointment: When needed a treatment period of 4 weeks starts. Applied once
 <p><b>Structure</b></p>
  <ul> 
     <li>Two steps: an initial 4-week course and a repeatable “if needed” 4-week course.</li> 
-    <li>Limits via <code>MedicationRequest.dosageInstruction.safety.limit</code>: 15&nbsp;g per 1 day (<code>scope=period</code>); “≤30% surface area” captured as narrative or profiled percent on <code>scope=administration</code>.</li> 
+    <li>Limits via <code>MedicationRequest.dosageInstruction.safety.doseLimit</code>: 15&nbsp;g per 1 day (<code>scope=period</code>); “≤30% surface area” captured as narrative or profiled percent on <code>scope=administration</code>.</li> 
   </ul> 
 
 <pre class="yaml">
@@ -2532,8 +2529,7 @@ MedicationRequest
   medication 
     concept
       coding: Dovobet ointment
-
-  dosage
+  dosageInstruction 
     step
       component
         timing
