--- a/source/history.html
+++ b/source/history.html
@@ -386,7 +386,7 @@ to a new type.
            <li><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationEvaluation.html">ImmunizationEvaluation</a></li>
            <li><a href="insuranceplan.html">InsurancePlan</a></li>
            <li><a href="invoice.html">Invoice</a></li>
-           <li><a href="medicationknowledge.html">MedicationKnowledge</a></li>
+           <li>MedicationKnowledge</li>
            <li>MedicinalProduct</li>
            <li>MedicinalProductAuthorization</li>
            <li>MedicinalProductContraindication</li>
@@ -490,7 +490,7 @@ to a new type.
       <p><b>This is only the major changes</b>. More comprehensive lists can be found in the ballot introduction (later removed).</p>
       <p>Major changes in the other parts of the specification:</p>
       <ul>
-       <li>New Resources: <a href="medicationknowledge.html">MedicationKnowledge</a>, <a href="devicedefinition.html">DeviceDefinition</a>, <a href="https://build.fhir.org/ig/HL7/admin-incubator/StructureDefinition-ChargeItemDefinition.html">ChargeItemDefinition</a></li>
+       <li>New Resources: MedicationKnowledge, <a href="devicedefinition.html">DeviceDefinition</a>, <a href="https://build.fhir.org/ig/HL7/admin-incubator/StructureDefinition-ChargeItemDefinition.html">ChargeItemDefinition</a></li>
        <li>Renamed Resources: <code>OrgnizationRole</code> to <a href="organizationaffiliation.html">OrganizationAffiliation</a>, <code>EligibilityRequest</code> to <a href="coverageeligibilityrequest.html">CoverageEligibilityRequest</a>, 
          <code>EligibilityResponse</code> to <a href="coverageeligibilityresponse.html">CoverageEligibilityResponse</a>, and <code>ProductPlan</code> to <a href="insuranceplan.html">InsurancePlan</a></li>
        <li>Significant rework around devices - in the <a href="device.html">Device</a> resource, remove <code>DeviceComponent</code> + new resource <a href="devicedefinition.html">DeviceDefinition</a></li>
